# rtcom-notification-ui

./: Makefile.am  configure.ac  org.freedesktop.Telepathy.Client.NotificationUI.service.in  rtcom-notification-ui.desktop
src/: Makefile.am  nui-call-monitor.c  nui-call-monitor.h  nui-core.h  nui-status-plugin.c  org.ofono.VoiceCall.xml
