SUBDIRS = src

servicesdir = $(datadir)/dbus-1/services/
services_DATA = org.freedesktop.Telepathy.Client.NotificationUI.service

MAINTAINERCLEANFILES = Makefile.in configure compile config.guess	\
		       config.h.in config.h.in~ config.sub depcomp	\
		       install-sh ltmain.sh missing aclocal.m4

hildonstatusmenudesktopentry_DATA = rtcom-notification-ui.desktop
EXTRA_DIST = $(hildonstatusmenudesktopentry_DATA)
